<resources>
    <string name="app_name">Timeline app</string>
    <string name="welcome">Welcome</string>
    <string name="select_your_grade">Select your grade</string>
    <string name="main_menu">main menu</string>
    <string name="pick_a_theme">Pick a theme and accent colour</string>
    <string name="english">English</string>
    <string name="日本語">日本語</string>
    <string name="todo">TODO</string>
    <string name="language">Language</string>
    <string name="choose_a_language">Choose a language</string>
    <string name="continuetext">Continue</string>
    <string name="error" translatable="false">error</string>
    <string-array name="grade_selection">
        <item>Grade 9</item>
        <item>Grade 8</item>
        <item>Grade 7</item>
        <item>Other</item>
    </string-array>
    <string-array name="language_selection">
        <item>English</item>
        <item>日本語</item>
    </string-array>
    <string-array name="theme_selection">
        <item>Light</item>
        <item>Dark</item>
        <item>System</item>
    </string-array>
    <string-array name="accent_selection">
        <item>Blue (default)</item>
        <item>Light blue</item>
        <item>Dark blue</item>
        <item>Red</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Magenta</item>
        <item>Purple</item>
        <item>Green</item>
        <item>Dark green</item>
    </string-array>
    <string name="title_activity_navigation_drawer" translatable="false">Navigation_drawer</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>

    <string name="home_second" translatable="false">Home Second</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="theme_and_accent">Theme and accent colour</string>
    <string name="grade">Grade</string>
    <string name="managebac">Managebac</string>
    <string name="timetables">Timetables</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_timetable_" translatable="false">Timetable_Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="period_1">Period 1</string>
    <string name="period_2">Period 2</string>
    <string name="period_3">Period 3</string>
    <string name="period_4">Period 4</string>
    <string name="period_5">Period 5</string>

    <string name="period_5_club">Period 5 (club)</string>
    <string name="period_6_club">Period 6 (club)</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>


    <string name="short_monday">Mon</string>
    <string name="short_tuesday">Tue</string>
    <string name="short_wednesday">Wed</string>
    <string name="short_thursday">Thu</string>
    <string name="short_friday">Fri</string>


    <string name="subject_english">English</string>
    <string name="subject_science">Science</string>
    <string name="subject_individuals">Individuals &amp;\nSocieties</string>
    <string name="subject_japanese">Japanese</string>
    <string name="subject_health">Health</string>
    <string name="subject_physical">Physical\nEducation</string>
    <string name="subject_design">Design</string>
    <string name="subject_art">Art</string>
    <string name="subject_music">Music</string>
    <string name="subject_math">Math</string>
    <string name="subject_qna">Q&amp;A</string>
    <string name="subject_service">Service Leaning</string>
    <string name="subject_community">Community\nProject</string>

    <string name="edit_timetables">Edit timetables</string>

    <string name="return_to_timetable">Return to timetable settings?</string>

    <string name="any_unsaved_changes">Any unsaved changes will be lost</string>

    <string name="option_ok">OK</string>

    <string name="option_cancel">Cancel</string>

    <string name="reset_to_default">Reset timetable to default?</string>
    <string name="only_this_day">Only this day will be reset</string>


    <string name="fill_out_previous">Fill out previous periods first</string>
    <string name="save_and_return">Save and return</string>
    <string name="edit_timetable_for">Edit timetable for:</string>
    <string name="timeline">Timeline</string>

    <string name="next_step">Next step  -></string>
    <string name="finish_and_save">Finish and save</string>

    <string name="colour">Colour</string>

    <string name="light_blue">Light blue</string>
    <string name="middle_blue">Blue</string>
    <string name="dark_blue">Dark blue</string>
    <string name="middle_green">Green</string>
    <string name="dark_green">Dark green</string>
    <string name="yellow">Yellow</string>
    <string name="orange">Orange</string>
    <string name="red">Red</string>
    <string name="magenta">Magenta</string>
    <string name="purple">Purple</string>
    <string name="light_grey">Light grey</string>
    <string name="dark_grey">Dark grey</string>
    <string name="create_new_task">Create new task</string>
    <string name="title">Title</string>
    <string name="description">Description</string>

    <string name="return_to_timeline">Return to timeline?</string>

    <string name="please_input_a_title">Please input a title</string>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

    <string name="edit_task">Edit task</string>

    <string name="notice">Notice</string>
    <string name="privacy_notice">Any information you input while within this app is only stored on this device. It is not transmitted to any external devices.</string>


</resources>
