<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">



        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_timetables"
                android:icon="@drawable/ic_timetable_icon"
                android:title="@string/timetables" />
            <item
                android:id="@+id/nav_managebac"
                android:icon="@drawable/ic_language_black_24dp"
                android:title="@string/managebac" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_icon"
                android:title="@string/settings" />

        </group>





</menu>

