<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view2"
        android:layout_width="320dp"
        android:layout_height="600dp"
        android:background="@drawable/rounded_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/editButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/transparent"
        android:text="@string/edit_timetables"
        android:textColor="#252525"
        app:layout_constraintBottom_toBottomOf="@+id/editButtonImage"
        app:layout_constraintEnd_toEndOf="@+id/buttonMonday"
        app:layout_constraintTop_toTopOf="@+id/editButtonImage" />

    <ImageButton
        android:id="@+id/editButtonImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="35dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_edit_icon"
        android:tint="#252525"
        app:layout_constraintStart_toStartOf="@+id/buttonMonday"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <Button
        android:id="@+id/buttonMonday"
        android:layout_width="200dp"
        android:layout_height="47dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_border_grey"
        android:text="@string/monday"
        android:textColor="#252525"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/editButtonText" />

    <Button
        android:id="@+id/buttonTuesday"
        android:layout_width="200dp"
        android:layout_height="47dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/rounded_border_grey"
        android:text="@string/tuesday"
        android:textColor="#252525"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/buttonMonday" />

    <Button
        android:id="@+id/buttonWednesday"
        android:layout_width="200dp"
        android:layout_height="47dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/rounded_border_grey"
        android:text="@string/wednesday"
        android:textColor="#252525"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/buttonTuesday" />

    <Button
        android:id="@+id/buttonThursday"
        android:layout_width="200dp"
        android:layout_height="47dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/rounded_border_grey"
        android:text="@string/thursday"
        android:textColor="#252525"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/buttonWednesday" />

    <Button
        android:id="@+id/buttonFriday"
        android:layout_width="200dp"
        android:layout_height="47dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/rounded_border_grey"
        android:text="@string/friday"
        android:textColor="#252525"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/buttonThursday" />



</androidx.constraintlayout.widget.ConstraintLayout>