<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstTime">


    <Spinner
        android:id="@+id/spinner_language_selection"
        style="@style/Widget.AppCompat.Spinner.DropDown.ActionBar"
        android:layout_width="240dp"
        android:layout_height="32dp"
        android:layout_marginTop="112dp"
        android:entries="@array/language_selection"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Welcometext" />

    <TextView
        android:id="@+id/text_select_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/choose_a_language"
        android:typeface="sans"
        app:layout_constraintBottom_toTopOf="@+id/spinner_language_selection"
        app:layout_constraintEnd_toEndOf="@+id/spinner_language_selection"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spinner_language_selection" />

    <TextView
        android:id="@+id/Welcometext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="?colorAccent"
        android:textSize="75sp"
        app:fontFamily="sans-serif-thin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.119" />

    <Spinner
        android:id="@+id/spinner_grade_selection"
        style="@style/Widget.AppCompat.Spinner.DropDown.ActionBar"
        android:layout_width="240dp"
        android:layout_height="32dp"
        android:layout_marginTop="80dp"
        android:entries="@array/grade_selection"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_language_selection" />

    <TextView
        android:id="@+id/text_select_grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/select_your_grade"
        android:typeface="sans"
        app:layout_constraintBottom_toTopOf="@+id/spinner_grade_selection"
        app:layout_constraintEnd_toEndOf="@+id/spinner_grade_selection"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spinner_grade_selection" />

    <TextView
        android:id="@+id/text_select_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/pick_a_theme"
        android:typeface="sans"
        app:layout_constraintBottom_toTopOf="@+id/spinner_theme_selection"
        app:layout_constraintEnd_toEndOf="@+id/spinner_theme_selection"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spinner_theme_selection" />

    <Spinner
        android:id="@+id/spinner_theme_selection"
        style="@style/Widget.AppCompat.Spinner.DropDown.ActionBar"
        android:layout_width="180dp"
        android:layout_height="32dp"
        android:layout_marginTop="80dp"
        android:entries="@array/theme_selection"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="@+id/spinner_grade_selection"
        app:layout_constraintTop_toBottomOf="@+id/spinner_grade_selection" />


    <Button

        android:id="@+id/button_continue_first"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_border"
        android:foregroundGravity="center"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_theme_selection" />

    <ImageButton
        android:id="@+id/accentButton"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@drawable/rounded_border_360"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_theme_selection"
        app:layout_constraintEnd_toEndOf="@+id/spinner_grade_selection"
        app:layout_constraintTop_toTopOf="@+id/spinner_theme_selection" />

    <TextView
        android:id="@+id/popupTether"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/text_select_language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Welcometext"
        app:layout_constraintVertical_bias="0.129" />

    <TextView
        android:id="@+id/continueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continuetext"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_continue_first"
        app:layout_constraintEnd_toEndOf="@+id/button_continue_first"
        app:layout_constraintStart_toStartOf="@+id/button_continue_first"
        app:layout_constraintTop_toTopOf="@+id/button_continue_first" />


</androidx.constraintlayout.widget.ConstraintLayout>