<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/frameLayout"
        android:layout_width="362dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPeriod1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="@string/period_1"
                android:maxLength="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar2" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPeriod3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:hint="@string/period_3"
                android:maxLength="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputPeriod2" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPeriod4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:hint="@string/period_4"
                android:maxLength="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputPeriod3" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPeriod5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:hint="@string/period_5"
                android:maxLength="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputPeriod4" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPeriod6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:hint="@string/period_6_club"
                android:maxLength="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputPeriod5" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPeriod2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:hint="@string/period_2"
                android:maxLength="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputPeriod1" />

            <Button
                android:id="@+id/lockerPeriod2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="@+id/inputPeriod2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/inputPeriod2" />

            <Button
                android:id="@+id/lockerPeriod3"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="@+id/inputPeriod3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/inputPeriod3" />

            <Button
                android:id="@+id/lockerPeriod4"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="@+id/inputPeriod4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/inputPeriod4" />

            <Button
                android:id="@+id/lockerPeriod5"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="@+id/inputPeriod5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/inputPeriod5" />

            <Button
                android:id="@+id/lockerPeriod6"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@android:color/transparent"
                app:layout_constraintBottom_toBottomOf="@+id/inputPeriod6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/inputPeriod6" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="?colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"

        android:background="@drawable/rounded_border"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/timetableEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#252525"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar2"
        app:layout_constraintVertical_bias="0.65" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/saveButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rounded_border"
                android:clickable="false"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />
        </RelativeLayout>

        <TextView
            android:id="@+id/saveText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/save_and_return"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="150dp"
            tools:layout_editor_absoluteY="721dp" />


    </FrameLayout>

    <TextView
        android:id="@+id/headerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/edit_timetable_for"
        android:textColor="#252525"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/timetableEditText"
        app:layout_constraintEnd_toStartOf="@+id/toolbar2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/toolbar2" />

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <Button
                android:id="@+id/resetButton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rounded_border_red"
                android:clickable="false"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />
        </RelativeLayout>

        <TextView
            android:id="@+id/resetText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Reset to default"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="150dp"
            tools:layout_editor_absoluteY="721dp" />


    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>